@@ -3,15 +3,16 @@ Hash: SHA256
 
 DIST rawdog-2.18.tar.gz 65471 SHA256 bd52afe738aabf53ceadaf26090e8880c764b81f30b54ee39b4ec5c29be962cb SHA512 7cdc10523e63d4a39c23f03be5db0f92fc378e44f6f789da8f2a919a1f894ac2fafc4ab8f5051fe61f3f2480b4ec818963a5f23083e094a998e5c4a72ddf4cec WHIRLPOOL e9619671673c11df489d276887b489621a754e15943ec4c7f952eef155dde613de3c660fa53cade01cee06077ff1765b4796620b6179d1d0b931223dcafd5f42
 DIST rawdog-2.19.tar.gz 66231 SHA256 fea40f673c334f8b0f21cac8c1498ae2130b7c2c79670c5d166bd5634e5313db SHA512 4e2ebf51feb98a0ce994218e6f057268846ed3194626877b5bd0b71971b5e79f1482af8dece29dc6be0a2e04728333b4814a73469b60c0970a323177511a5ae6 WHIRLPOOL 4635121c848660c54a10fde5045d3a810189b9e8b5486c03d7a99d99bcc44c1f9684f0d6f0fe18e9c3358c9d652c117b3c6eda11432ccc3a61d0e49aeb0aa5fb
-EBUILD rawdog-2.18-r1.ebuild 714 SHA256 4d7c51cb9917651ce2120323069d98838884ebab70a871a15ead060137dd17e0 SHA512 107e64574080d6f58248d82b839cffa6d7a990f0c8b37fac4ee03480631bd87bc440a8771136399c9a265d82a5dfff5519106b95bc6bebf3789cbe46d3a4d161 WHIRLPOOL 122a5bf9c3f409a1f25980072d267b814f56bb170e90f2c697f18850055ff913d0acc3910beca2dde33b3846294c9d3a5263f09a35da4f3784219279ad393544
+DIST rawdog-2.20.tar.gz 66933 SHA256 0a63b26cc111b0deca441f498177b49be0330760c5c0e24584cdb9ba1e7fd5a6 SHA512 83a023f4256cd49242769deef7eaee7ad40f6e61fe97885dd2b311f3e3c9c8a87338a06b1e08a634496bb939d6574795027405decf361f38727efd73dd2ba96b WHIRLPOOL 0582b05560ee18dfef115141f408c3e90b458b506cbb801cd984fba8ba2dc1c95c20d2d60a07137322f61e3e63226e3df4d906554957a1d1ec77c3d4be69161b
 EBUILD rawdog-2.18.ebuild 679 SHA256 4f3485986ed0c9b4c54d05a9d99df0308bd8e8be25a51612750c94552f4aba87 SHA512 6ec28a82b5e48fc6ac9c712131aaad3da9e540e51f3df115960e5e9578d6f2734d8a71ba782e3e030f94734162265abc4d8d5c2f5da1f7ff180c5b0e1a46978b WHIRLPOOL e7a48fb31d7e025bdbef6aaaea1bd770ad96950b7320b5e7cf1f41c62706d158a6aaddb6f4bd1070f6be33ff9779796ab56d2b42b08aeb2a0ed521ae9b07cc1a
-EBUILD rawdog-2.19.ebuild 629 SHA256 3e7ee49b484881a80f81b9316b42fc0d4e1abdef5b35133528c6c447a04983c0 SHA512 d435b35ae40ca4a3c3a9c2452cb680d0bd5695a1706d3a4172a4e7444d91aa6365e379dbe025763fc21e74085ac17e90a8d3a74aa6c54ae954051522fc29dab0 WHIRLPOOL 7131613b394c6650cb3c45abba2a968d5e02e1008d50a9f30984cf6bd0c183158d2ec204eac7854feba5d5c2e90fc40363b6c2e3e7164a75de2c5d4f6d332894
-MISC ChangeLog 6866 SHA256 df1df5ce27bacda06e22b5e9d0ca2eb7afa142b88828c88db098a6a857cecfd2 SHA512 160acf0c013518536ea88d95d6e1d3e2fe7b521f09a5d1a9b4120f7b81a3085efb4392469845fbfda5858957fc1e36b47b29de2e0ba57e6df57012c7c25485a2 WHIRLPOOL c9a81a49ed66a6f542ec56b1d7ab3ab1e954548c2114faaa54620818736e0bd81936eb86c3deecd921e086c4a77f392067fab8d531619dd9cd719fd1c12b2588
+EBUILD rawdog-2.19.ebuild 794 SHA256 c1d9e5a80fda3493206538ee09d4f5f22c547e75b8a641fbf5f9867eef92e1fa SHA512 fd6de59f37f6dd6c1c69f65072ac169f18e2a07e61a393eca3886756b263b0652caa02b949f8ba0d9a1bfa0adc9b85089d4462f14f9c7ae004db87f3935843e4 WHIRLPOOL c9b907005cc6dcc67b9e1cde0c521b04027af090b13492413a5c8176cecb90071d7744adbfd699f3bc01ba12ec248079988fef3592b73d87325d4435a7647cd5
+EBUILD rawdog-2.20.ebuild 794 SHA256 995ce1cc9f01aecb16ad6a204bd1d5b65639075f6d15be32a5d561b636a6913e SHA512 0011e364579113edd1454d146db5df8d649bba8d02a99b1377e3fc08ecb53b051848b6aa0791fad30900f5101dbfc7baee5033c3020040f4cc20687f8079c022 WHIRLPOOL 16580dbee1cb2f19284d173c00b7198d678aabc72e51c1160a80223a045c78c27f5dfdcc6901ec2ef421000d27898e4656cd7228fd9d91224b69b7a8cc1379c1
+MISC ChangeLog 7075 SHA256 c735cf9d95a1150e3f0050b99c9d803235808f2e15437f3707accb147c503675 SHA512 3534c4fb5dd72207279b311ab44717f9880b8d79e5e7d3104ff7a7bd48d73edf24f578c656ff6a1fdc840a6541e1c4b9c97802b68d7e6fa5e4dbbe893ef319cd WHIRLPOOL 5acdf32cf86ff491567e17451bb3a2ae0242943e61779309ad2cf56dd2794b6de2599fcd88fe5a274a388f07a3e69bc5d50e4043621630e245ba5e2348a6d9f1
 MISC metadata.xml 584 SHA256 5e205dc57e57de94ffc59ded6cc4791fa360cb5dd8440016b522326d84031410 SHA512 6337acce9e7fd376f873dc0d47555dfe66000d0e656d39339345a1e4e2f5e4b42fc9277ff3fc81fce675b2a0d75ac43eff016f4a394430c032510ba0b6a21905 WHIRLPOOL 4fcf141fcd468d11855d872569101a7df77a5f8f37a63ea9eadd7ba43403f9aaf6cfe307a436bddb25100d217778dbfb954a6652676753f9ca59a61482c820e4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNYhQgACgkQso7CE7gHKw2KawCeO+zhSsgApiq7B2fenFBWgbyp
-ZAQAn3FbZ8ikP8R7Gcbm72NHEPkuSnMw
-=7D/b
+iEYEAREIAAYFAlQ47pQACgkQso7CE7gHKw3apgCgzUrKy0BHGQPpAmruf5QVi97k
+lIEAn2+nAUQjCBA91sryHAjHZ5htRWgX
+=KIXX
 -----END PGP SIGNATURE-----
