@@ -1,6 +1,12 @@
 # ChangeLog for net-news/rawdog
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-news/rawdog/ChangeLog,v 1.54 2014/04/24 03:36:19 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-news/rawdog/ChangeLog,v 1.55 2014/10/11 08:47:01 idella4 Exp $
+
+*rawdog-2.20 (11 Oct 2014)
+
+  11 Oct 2014; Ian Delaney <idella4@gentoo.org> +rawdog-2.20.ebuild,
+  -rawdog-2.18-r1.ebuild, rawdog-2.19.ebuild:
+  bump; add test phase to run prepared shell script to run tests
 
 * rawdog-2.18-r1.ebuild (24 Apr 2014)
 
